# unifi_tracker

./: .gitignore  Dockerfile  LICENSE  README.md  device_tracker.py  pyproject.toml  setup.cfg  test_diff.py  unifi_tracker.py
HA/: device_tracker.yaml
app/: device_tracker.py  entrypoint.sh
src/unifi_tracker/: __init__.py  unifi_tracker.py
tests/: mock_clients.py  run_tests.sh  test_diff.py  test_diff_by_ap.py  test_property_setters.py
