[project]
name = "unifi_tracker"
version = "0.1.2"
authors = [{name = "Joel P.", email = "joelp@live.com"}]
description = "Track the comings and goings of WiFi clients on multiple Unifi APs and generate a diff between scans."
keywords = ["unifi", "wifi", "tracker", "presence", "mqtt"]
readme ={file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "paramiko>=2.12"
]

[project.optional-dependencies]
paho-mqtt = ["paho-mqtt>=2.0"]

[project.urls]
Homepage = "https://github.com/idatum/unifi_tracker"
Issues = "https://github.com/idatum/unifi_tracker/issues"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"