[metadata]
name = unifi_tracker
version = 0.0.6
author = Joel P.
author_email = joelp@live.com
description = Track the comings and goings of WiFi clients on multiple Unifi APs and generate a diff between scans.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/idatum/unifi_tracker
project_urls =
    Bug Tracker = https://github.com/idatum/unifi_tracker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src